Deleted compiled CSS. Nav, App: bugfixes & improvements
* Changed reserved words used in some parts for Android compatibility
* Check if values saved in localStorage are not null before parsing with JSON (for Android compatibility)
* New "onLoadContent" method replacing "onLoad" (FIXME CHECK)

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -10,7 +10,7 @@
     %script{:src=>"../js/plugins/ui.min.js",:type=>"text/javascript"}
 
 %body.main
-    %header#moo-header.moo-header
+    %header#moo-header
         %h1 Mootor demo
         %nav
             %a.moo-nav-back{:href=>"#moo-nav-back"} Back
