--- a/source/css/sass/_mootor.ui.image.scss
+++ b/source/css/sass/_mootor.ui.image.scss
@@ -50,5 +50,9 @@
         width: 105px;
         height: 105px;
         &.moo-active { border: 2px solid #000;}
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
     }
 }
