--- a/examples/index.haml
+++ b/examples/index.haml
@@ -3,6 +3,7 @@
     %title Mootor demo
     %meta{:name=>"viewport", :content=>"width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %meta{:name=>"apple-mobile-web-app-capable", :content=>"yes"}
+    %meta{:"http-equiv"=>"Content-Type", "content"=>"text/html; charset=utf-8"}
     %link{:href=>"../css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"../js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"../js/plugins/nav.js",:type=>"text/javascript"}
