--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -35,7 +35,7 @@
         padding: 1em 2em;
         border-top: 1px solid #CCC;
         &:first-child { border-top: none }
-        > label {
+        > label, > legend {
             @include float-left;
             font-size: 2em;
             font-weight: 700;
@@ -244,7 +244,7 @@
         display: block;
         padding: 0.5em 0.5em 0.5em 2em;
         background: #FFF;
-        font-size: 1.4em;
+        font-size: 1.4em; 
     }
     &.moo-active {
         .moo-ui-checkbox-icon {
