Text updated (Useful info)

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -48,7 +48,7 @@
                     "nav",
                     "item1",
                     "item2",
-                    "gestures",
+                    "gestures"
                ],
                nav: myNav
            });
@@ -57,7 +57,7 @@
            myApp.load(
                 myApp.get("ui"),
                 myNav.get("ui")
-           );           
+           );                  
                                   
        });
        
