--- a/source/css/sass/_mootor.ui.image.scss
+++ b/source/css/sass/_mootor.ui.image.scss
@@ -10,7 +10,7 @@
     top: 20%;
     left: 10%;
     min-width: 236px;
-    max-width: 581px;
+    max-width: 660px;
     width: 80%;
     height: auto;
     z-index: 800;
@@ -20,7 +20,7 @@
         a {
             color: #efefef;
             font-size: 1.2em;
-            @include background(linear-gradient(top, #777,#444));
+            background-color: #666;
             border: 1px solid #444;
             @include border-radius(3px);
             display: inline-block;
@@ -33,11 +33,11 @@
 .moo-ui-image-panel {
     background-color: #FFF;
     @include border-radius(6px);
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     width: 100%;
     height: auto;
-    max-height: 232px;
+    max-height: 12em;
     z-index: 1000;
     .moo-image-wrapper { @include float-left; margin: 0.5em;}
     .moo-image {
@@ -46,9 +46,9 @@
         vertical-align: middle;
         border: 1px solid #eee;    
         display: table-cell;
-        margin: 2px;
-        width: 105px;
-        height: 105px;
+        margin: .2em;
+        width: 4.5em;
+        height: 4.5em;
         &.moo-active { border: 2px solid #000;}
         img {
             max-width: 100%;
