Added "onChange" event for UI.camera, bugfixes.

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -14,7 +14,7 @@
     %header#moo-header
         %h1 Mootor demo
         %nav
-            %a.moo-nav-back{:href=>"#moo-nav-back"} Back
+            %a.moo-nav-back Back
 
     #main.moo-panels
         #home.moo-panel
@@ -63,4 +63,3 @@
        
     }(Mootor));
     
-
