android 4 bugfixes in form

--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -27,7 +27,7 @@
 
 .moo-ui-form {
     text-align: left;
-    width: 90%;
+    width: 90%; // FIXME
     margin: 5em auto;
     background-color: #FFF;
     border: 1px solid #CCC;
