Updated examples, new $.loadingScreen.show() / hide() functions, bugfixes on Core.Gestures.

--- a/examples/views/core_selector/core_selector.html
+++ b/examples/views/core_selector/core_selector.html
@@ -1,3 +1,3 @@
 <h1>$ Selector</h1>
-<p id='myElement'>This element has the id 'myElement'</p>
+<p style='text-align:center'>#myElement This element has the id 'myElement'</p>
 <a class='button' id='selectorTest'>$("#myElement")[0]</a>
