Bugfixes on Gestures, UI, Core. Added Nav.Footer. Updated examples

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -26,6 +26,7 @@
         #ui.moo-panel
         #core.moo-panel
         #core_selector.moo-panel
+        #core_ready.moo-panel
         #nav.moo-panel
         #fx.moo-panel
         #app.moo-panel
