--- a/examples/views/core_selector/core_selector.haml
+++ b/examples/views/core_selector/core_selector.haml
@@ -1,3 +1,3 @@
 %h1 $ Selector
-%p{:style=>"text-align:center"}#myElement This element has the id 'myElement'
+%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
 %a.button#selectorTest $("#myElement")[0]
