Finished examples for Core, Gestures, Fx, UI.Checkbox, UI.Map

--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -1971,3 +1971,8 @@ nav.app .moo-nav.client-accept:before {
 .myMap {
   position: absolute;
 }
+
+/* line 45, demo/styles.scss */
+.blue {
+  background: #0000dd;
+}
