--- a/examples/index.haml
+++ b/examples/index.haml
@@ -22,13 +22,38 @@
 
     #main
         #index.moo-panel
-        #gestures.moo-panel
-        #ui.moo-panel
-        #ui_map.moo-panel
+
         #core.moo-panel
-        #core_selector.moo-panel
+        #core_ajax.moo-panel
+        #core_context.moo-panel
+        #core_extend.moo-panel
+        #core_find.moo-panel
+        #core_hasclass.moo-panel
+        #core_hide.moo-panel
+        #core_html.moo-panel
+        #core_on.moo-panel
         #core_ready.moo-panel
-        #nav.moo-panel
+        #core_removeclass.moo-panel
+        #core_require.moo-panel
+        #core_selector.moo-panel
+        #core_setclass.moo-panel
+        #core_show.moo-panel
+        #core_unbind.moo-panel
+
         #fx.moo-panel
-        #app.moo-panel
+        #fx_translate.moo-panel
+
+        #gestures.moo-panel
+
+        #ui.moo-panel
+        #ui_checkbox.moo-panel
+        #ui_map.moo-panel
+        #ui_option.moo-panel
+        #ui_overlay.moo-panel
+        #ui_select.moo-panel
+        #ui_text.moo-panel
+        #ui_textarea.moo-panel
+        #ui_toggleswitch.moo-panel
+        #ui_camera.moo-panel
+        #ui_simplecamera.moo-panel
         
