--- a/examples/views/core/core.haml
+++ b/examples/views/core/core.haml
@@ -1,13 +1,12 @@
-%h1 Core
 %nav
-    %a.moo-nav{:href=>"#core_selector"} $ Selector
+    %a.moo-nav{:href=>"#core_selector"} $()
     %a.moo-nav{:href=>"#core_ready"} $().ready()
     %a.moo-nav{:href=>"#core_find"} $().find()
     %a.moo-nav{:href=>"#core_hide"} $().hide()
     %a.moo-nav{:href=>"#core_show"} $().show()
-    %a.moo-nav{:href=>"#core_hasClass"} $().hasClass()
-    %a.moo-nav{:href=>"#core_setClass"} $().setClass()
-    %a.moo-nav{:href=>"#core_removeClass"} $().removeClass()
+    %a.moo-nav{:href=>"#core_hasclass"} $().hasClass()
+    %a.moo-nav{:href=>"#core_setclass"} $().setClass()
+    %a.moo-nav{:href=>"#core_removeclass"} $().removeClass()
     %a.moo-nav{:href=>"#core_on"} $().on()
     %a.moo-nav{:href=>"#core_unbind"} $().unbind()
     %a.moo-nav{:href=>"#core_html"} $().html()
