--- a/examples/views/core/core.html
+++ b/examples/views/core/core.html
@@ -1,13 +1,12 @@
-<h1>Core</h1>
 <nav>
-  <a class='moo-nav' href='#core_selector'>$ Selector</a>
+  <a class='moo-nav' href='#core_selector'>$()</a>
   <a class='moo-nav' href='#core_ready'>$().ready()</a>
   <a class='moo-nav' href='#core_find'>$().find()</a>
   <a class='moo-nav' href='#core_hide'>$().hide()</a>
   <a class='moo-nav' href='#core_show'>$().show()</a>
-  <a class='moo-nav' href='#core_hasClass'>$().hasClass()</a>
-  <a class='moo-nav' href='#core_setClass'>$().setClass()</a>
-  <a class='moo-nav' href='#core_removeClass'>$().removeClass()</a>
+  <a class='moo-nav' href='#core_hasclass'>$().hasClass()</a>
+  <a class='moo-nav' href='#core_setclass'>$().setClass()</a>
+  <a class='moo-nav' href='#core_removeclass'>$().removeClass()</a>
   <a class='moo-nav' href='#core_on'>$().on()</a>
   <a class='moo-nav' href='#core_unbind'>$().unbind()</a>
   <a class='moo-nav' href='#core_html'>$().html()</a>
