--- a/examples/views/core_find/core_find.haml
+++ b/examples/views/core_find/core_find.haml
@@ -1,3 +1,10 @@
-%h1 $ Selector
-%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
-%a.button#selectorTest $("#myElement")[0]
+%p{:style=>"text-align:center"} 
+    %a#core_find_Button.button Find paragraphs
+
+#core_find_myDiv
+    %p Paragraph 1
+    %p Paragraph 2
+    %p Paragraph 3
+    %p Paragraph 4
+    %p Paragraph 5
+    
