--- a/examples/views/core_hasclass/core_hasclass.haml
+++ b/examples/views/core_hasclass/core_hasclass.haml
@@ -1,3 +1,5 @@
-%h1 $ Selector
-%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
-%a.button#selectorTest $("#myElement")[0]
+%p{:style=>"text-align:center"} 
+    %a#core_hasclass_Button.button Has class 'test'?
+
+#core_hasclass_myDiv.test
+    This div has class test
