--- a/examples/views/core_ready/core_ready.haml
+++ b/examples/views/core_ready/core_ready.haml
@@ -1,6 +1,5 @@
-%h1 $().ready()
-%img#myImage{:src=>""}
+%img#core_ready_myImage{:src=>""}
 <br />
-%p#myElement{:style=>"text-align:center"} 
-    %a#loadMyImage.button Load picture
+%p#core_ready_myElement{:style=>"text-align:center"} 
+    %a#core_ready_loadMyImage.button Load picture
  
