--- a/examples/views/core_ready/core_ready.html
+++ b/examples/views/core_ready/core_ready.html
@@ -1,6 +1,5 @@
-<h1>$().ready()</h1>
-<img id='myImage' src='' />
+<img id='core_ready_myImage' src='' />
 <br />
-<p id='myElement' style='text-align:center'>
-  <a class='button' id='loadMyImage'>Load picture</a>
+<p id='core_ready_myElement' style='text-align:center'>
+  <a class='button' id='core_ready_loadMyImage'>Load picture</a>
 </p>
