--- a/examples/views/core_setclass/core_setclass.haml
+++ b/examples/views/core_setclass/core_setclass.haml
@@ -1,3 +1,4 @@
-%h1 $ Selector
-%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
-%a.button#selectorTest $("#myElement")[0]
+%p{:style=>"text-align:center"} 
+    %a#core_setclass_Button.button Set class 'blue'
+
+#core_setclass_myDiv{:style=>"width: 250px; height: 250px; margin: 0 auto"}
