--- a/examples/views/index/index.haml
+++ b/examples/views/index/index.haml
@@ -1,7 +1,5 @@
 %nav
-    %a.moo-nav{:href=>"#core"} $ Core
-    %a.moo-nav{:href=>"#gestures"} $ Gestures
-    %a.moo-nav{:href=>"#fx"} $ Fx
-    %a.moo-nav{:href=>"#nav"} Nav
+    %a.moo-nav{:href=>"#core"} $
+    %a.moo-nav{:href=>"#gestures"} Gestures
+    %a.moo-nav{:href=>"#fx"} Fx
     %a.moo-nav{:href=>"#ui"} UI
-    %a.moo-nav{:href=>"#app"} App
