--- a/examples/views/ui/ui.html
+++ b/examples/views/ui/ui.html
@@ -1,4 +1,12 @@
-<h1>UI</h1>
 <nav>
+  <a class='moo-nav' href='#ui_checkbox'>Checkbox</a>
   <a class='moo-nav' href='#ui_map'>Map</a>
+  <a class='moo-nav' href='#ui_option'>Option</a>
+  <a class='moo-nav' href='#ui_select'>Select</a>
+  <a class='moo-nav' href='#ui_text'>Text</a>
+  <a class='moo-nav' href='#ui_textarea'>TextArea</a>
+  <a class='moo-nav' href='#ui_toggleswitch'>ToggleSwitch</a>
+  <a class='moo-nav' href='#ui_overlay'>Overlay</a>
+  <a class='moo-nav' href='#ui_camera'>Camera</a>
+  <a class='moo-nav' href='#ui_simplecamera'>SimpleCamera</a>
 </nav>
