--- a/examples/views/core_hide/core_hide.haml
+++ b/examples/views/core_hide/core_hide.haml
@@ -1,3 +1,4 @@
-%h1 $ Selector
-%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
-%a.button#selectorTest $("#myElement")[0]
+%p{:style=>"text-align:center"} 
+    %a#core_hide_Button.button Hide div
+
+#core_hide_myDiv{:style=>"background: #0000aa; width: 250px; height: 250px; margin: 0 auto"}
