--- a/examples/views/core_show/core_show.haml
+++ b/examples/views/core_show/core_show.haml
@@ -1,3 +1,4 @@
-%h1 $ Selector
-%p#myElement{:style=>"text-align:center"} This element has the id 'myElement'
-%a.button#selectorTest $("#myElement")[0]
+%p{:style=>"text-align:center"} 
+    %a#core_show_Button.button Show div
+
+#core_show_myDiv{:style=>"background: #0000aa; width: 250px; height: 250px; margin: 0 auto;"}
