--- a/examples/views/gestures/gestures.html
+++ b/examples/views/gestures/gestures.html
@@ -1,3 +1,3 @@
-<h1>Gestures</h1>
+<h1>Try gestures below</h1>
 <div class='gestureTestingArea' id='gestureTestingArea'></div>
 <div class='gestureTestingStatus' id='gestureTestingStatus'></div>
