--- a/examples/views/index/index.html
+++ b/examples/views/index/index.html
@@ -1,8 +1,6 @@
 <nav>
-  <a class='moo-nav' href='#core'>$ Core</a>
-  <a class='moo-nav' href='#gestures'>$ Gestures</a>
-  <a class='moo-nav' href='#fx'>$ Fx</a>
-  <a class='moo-nav' href='#nav'>Nav</a>
+  <a class='moo-nav' href='#core'>$</a>
+  <a class='moo-nav' href='#gestures'>Gestures</a>
+  <a class='moo-nav' href='#fx'>Fx</a>
   <a class='moo-nav' href='#ui'>UI</a>
-  <a class='moo-nav' href='#app'>App</a>
 </nav>
