UI.Map plugin improvements (abstraction form Google Maps API, addMarker) new Geo plugin

--- a/examples/views/index/index.haml
+++ b/examples/views/index/index.haml
@@ -2,4 +2,5 @@
     %a.moo-nav{:href=>"#core"} $
     %a.moo-nav{:href=>"#gestures"} Gestures
     %a.moo-nav{:href=>"#fx"} Fx
+    %a.moo-nav{:href=>"#geo"} Geo
     %a.moo-nav{:href=>"#ui"} UI
