--- a/examples/views/index/index.html
+++ b/examples/views/index/index.html
@@ -2,5 +2,6 @@
   <a class='moo-nav' href='#core'>$</a>
   <a class='moo-nav' href='#gestures'>Gestures</a>
   <a class='moo-nav' href='#fx'>Fx</a>
+  <a class='moo-nav' href='#geo'>Geo</a>
   <a class='moo-nav' href='#ui'>UI</a>
 </nav>
