--- a/examples/index.haml
+++ b/examples/index.haml
@@ -9,6 +9,7 @@
     %script{:src=>"../js/plugins/nav.js",:type=>"text/javascript"}
     %script{:src=>"../js/plugins/app.js",:type=>"text/javascript"}
     %script{:src=>"../js/plugins/ui.js",:type=>"text/javascript"}
+    %script{:src=>"../js/plugins/geo.js",:type=>"text/javascript"}
 
     %script{:src=>"js/app.js",:type=>"text/javascript"}
 
@@ -44,6 +45,8 @@
         #fx_translate.moo-panel
 
         #gestures.moo-panel
+
+        #geo.moo-panel
 
         #ui.moo-panel
         #ui_checkbox.moo-panel
