--- a/examples/views/ui_checkbox/ui_checkbox.html
+++ b/examples/views/ui_checkbox/ui_checkbox.html
@@ -1,13 +1,15 @@
-<form class='moo-ui-form'>
+<form action='' class='moo-ui-form' method='post'>
   <div class='moo-field'>
-    <legend>Checkbox</legend>
+    <legend>
+      Checkbox
+    </legend>
     <fieldset id='ui_checkbox_Fieldset'>
-      <label>Check 1</label>
-      <input type='checkbox' value='0' />
-      <label>Check 2</label>
-      <input type='checkbox' value='1' />
-      <label>Check 3</label>
-      <input type='checkbox' value='2' />
+      <label for='check1'>Option 1</label>
+      <input id='check1' name='checkboxes' type='checkbox' value='0' />
+      <label for='check2'>Option 2</label>
+      <input id='check2' name='checkboxes' type='checkbox' value='1' />
+      <label for='check3'>Option 3</label>
+      <input id='check3' name='checkboxes' type='checkbox' value='2' />
     </fieldset>
   </div>
 </form>
