--- a/examples/views/ui_overlay/ui_overlay.haml
+++ b/examples/views/ui_overlay/ui_overlay.haml
@@ -1,1 +1,7 @@
-%h1 $.ui({type: "Overlay"})
+%p{:style=>"text-align:center"} 
+    %a#ui_overlay_show_Button.button Show overlay for 1 second
+%p{:style=>"text-align:center"} 
+    %a#ui_loading_show_Button.button Show loading for 1 second
+%p{:style=>"text-align:center"} 
+    %a#ui_loadingoverlay_show_Button.button Show overlay + loading for 1 second
+
