--- a/examples/views/ui_overlay/ui_overlay.html
+++ b/examples/views/ui_overlay/ui_overlay.html
@@ -1,1 +1,9 @@
-<h1>$.ui({type: "Overlay"})</h1>
+<p style='text-align:center'>
+  <a class='button' id='ui_overlay_show_Button'>Show overlay for 1 second</a>
+</p>
+<p style='text-align:center'>
+  <a class='button' id='ui_loading_show_Button'>Show loading for 1 second</a>
+</p>
+<p style='text-align:center'>
+  <a class='button' id='ui_loadingoverlay_show_Button'>Show overlay + loading for 1 second</a>
+</p>
