--- a/examples/views/ui_camera/ui_camera.haml
+++ b/examples/views/ui_camera/ui_camera.haml
@@ -1,1 +1,5 @@
-
+%p{:style=>"text-align:center"} 
+    %a#ui_camera_Button.button 
+        Take or choose picture (
+        %span#ui_camera_count 0
+        )
