--- a/source/css/sass/_mootor.nav.scss
+++ b/source/css/sass/_mootor.nav.scss
@@ -34,7 +34,8 @@ body, html {
     nav a {
         padding: .5em 1em;
         width: auto;
-        display: inline;
+        float: left;
+        display: block;
         font-size: 1.5em;
     }
 }
