--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -41,7 +41,7 @@
         &:first-child { border-top: none }
         > label, > legend {
             @include float-left;
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: 700;
             width: 25%;
         }
@@ -63,7 +63,7 @@
     height: 3em;
     // z-index: 300;  BUG WITH MULTIPLE SELECTS
     .moo-ui-select-text {
-        font-size: 1.5em;
+        font-size: 1.3em;
         line-height: 1.5;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -73,7 +73,7 @@
         width: 90%;
     }
     .moo-ui-select-link {
-        color: #000;
+        color: #999;
         line-height: 2.25em;
         text-align: right;
         text-decoration: none;
@@ -81,24 +81,9 @@
         height: 100%;
         padding: 0 0.5em;
         position:relative;
-        right: 0;
+        right: -.2em;
         z-index: 10;
-        &:after  {
-            @include background(linear-gradient(top, #FFF, #CCC));
-            border-top: 1px solid #666;
-            border-right: 1px solid #666;
-            border-bottom: 1px solid #666;
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-            content: " "; 
-            display: block;
-            position: absolute;
-            top: -0.35em;
-            right: -0.35em;
-            width: 2.75em;
-            height: 2.8em;
-            z-index: -1;
-        }
+
     }
     .moo-ui-select-menu {
         background-color: #999;
@@ -283,13 +268,13 @@
     }
     .moo-ui-checkbox {
         float: left;
-        padding: 0 0 0 1em;
+        padding: 0 0 0 1.3em;
         width: 100%; // FIXME this width has issues in android.
-        border-bottom: 1px solid $input-border-color;
         label {
             background-color: transparent;
-            font-size: 1.6em;
+            font-size: 15px;
             padding: .75em 3em .75em 2.5em;
+            line-height: 135%;
             position: relative;
             width: 100%;
             @extend .clearfix;
