--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -446,6 +446,7 @@ nav a {
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
   background: -moz-linear-gradient(top, #ffffff, #cccccc);
   background: -o-linear-gradient(top, #ffffff, #cccccc);
+  background: -ms-linear-gradient(top, #ffffff, #cccccc);
   background: linear-gradient(top, #ffffff, #cccccc);
   border-top: 1px solid #666;
   border-right: 1px solid #666;
@@ -498,6 +499,7 @@ nav a {
   background: -webkit-linear-gradient(top, #daeaec, #cee3e6);
   background: -moz-linear-gradient(top, #daeaec, #cee3e6);
   background: -o-linear-gradient(top, #daeaec, #cee3e6);
+  background: -ms-linear-gradient(top, #daeaec, #cee3e6);
   background: linear-gradient(top, #daeaec, #cee3e6);
   border-top-color: #AEBBBD;
   border-bottom-color: #AEBBBD;
@@ -601,6 +603,7 @@ nav a {
   background: -webkit-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -moz-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -o-radial-gradient(#ffffff, #a6c9fd 6px);
+  background: -ms-radial-gradient(#ffffff, #a6c9fd 6px);
   background: radial-gradient(#ffffff, #a6c9fd 6px);
   border-radius: 0.5em;
   -webkit-box-shadow: 0 0 2px 2px #666666;
@@ -658,6 +661,7 @@ nav a {
   background: -webkit-linear-gradient(top, #ffffff, #bdd7fd);
   background: -moz-linear-gradient(top, #ffffff, #bdd7fd);
   background: -o-linear-gradient(top, #ffffff, #bdd7fd);
+  background: -ms-linear-gradient(top, #ffffff, #bdd7fd);
   background: linear-gradient(top, #ffffff, #bdd7fd);
   -webkit-box-shadow: 0 0 2px 2px #666666;
   -moz-box-shadow: 0 0 2px 2px #666666;
@@ -672,6 +676,7 @@ nav a {
   background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: linear-gradient(top, #dddddd, #ffffff 45%);
   border: 1px solid #666;
   border-radius: 0.5em;
@@ -699,6 +704,7 @@ nav a {
   background-image: -webkit-linear-gradient(top, #ffffff, #dedede);
   background-image: -moz-linear-gradient(top, #ffffff, #dedede);
   background-image: -o-linear-gradient(top, #ffffff, #dedede);
+  background-image: -ms-linear-gradient(top, #ffffff, #dedede);
   background-image: linear-gradient(top, #ffffff, #dedede);
   border: 1px solid #666;
   border-radius: 0.5em;
@@ -883,19 +889,23 @@ nav a {
   color: #333;
   padding: 0.5em;
   position: relative;
-  top: -10em;
-  left: -15em;
-  width: 31em;
+  top: 10%;
+  left: 10%;
+  width: 80%;
   height: auto;
   z-index: 1500;
 }
 /* line 27, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-container header {
   color: #FFF;
-  text-shadow: 0px 0px 1px #aaaaaa;
+  text-shadow: #aaaaaa 0px 0px 1px;
+}
+/* line 30, ../../source/css/sass/_mootor.ui.modal.scss */
+.moo-ui-modal-container header h1 {
+  margin: 0;
 }
 
-/* line 32, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 35, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -903,19 +913,20 @@ nav a {
   -o-border-radius: 6px;
   border-radius: 6px;
   background-color: #FFF;
-  width: 30em;
+  width: 99.5%;
   overflow: hidden;
   padding: 5px;
+  margin: 0 auto;
   /* Pasar estos a estilos de botones genericos */
 }
-/* line 38, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 42, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-title {
   color: #000;
   font-size: 2em;
   font-weight: 700;
   white-space: nowrap;
 }
-/* line 44, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 48, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-text {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5em;
@@ -923,12 +934,12 @@ nav a {
   padding: 0;
   margin: 0.5em;
 }
-/* line 53, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 57, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-buttons {
   margin: 1.5em 0 0;
   overflow: hidden;
 }
-/* line 55, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 59, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-cancel,
 .moo-ui-modal-panel .moo-ui-submit {
   -webkit-border-radius: 5px;
@@ -941,7 +952,7 @@ nav a {
   line-height: 200%;
   width: 49%;
 }
-/* line 62, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 66, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-cancel {
   display: inline;
   float: left;
@@ -949,10 +960,11 @@ nav a {
   background: -webkit-linear-gradient(top, #eeeeee, #cccccc);
   background: -moz-linear-gradient(top, #eeeeee, #cccccc);
   background: -o-linear-gradient(top, #eeeeee, #cccccc);
+  background: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background: linear-gradient(top, #eeeeee, #cccccc);
   border: 1px solid #c1c1c1;
 }
-/* line 67, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 71, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-submit {
   display: inline;
   float: right;
@@ -960,6 +972,7 @@ nav a {
   background: -webkit-linear-gradient(top, #cccccc, #888888);
   background: -moz-linear-gradient(top, #cccccc, #888888);
   background: -o-linear-gradient(top, #cccccc, #888888);
+  background: -ms-linear-gradient(top, #cccccc, #888888);
   background: linear-gradient(top, #cccccc, #888888);
   border: 1px solid #a1a1a1;
   color: #FFF;
